--- a/app/src/main/res/drawable/lt_splash.xml
+++ b/app/src/main/res/drawable/lt_splash.xml
@@ -1,52 +1,42 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="288dp"
-    android:height="288dp"
-    android:viewportWidth="288"
-    android:viewportHeight="288">
+<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--    <item><shape><solid android:color="@color/purple_40"/></shape></item>-->
 
-    <path
-        android:fillColor="#00000000"
-        android:strokeColor="#FFFFFF"
-        android:strokeWidth="10"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round"
-        android:pathData="
-            M144,4
-            A140,140 0 1,1 143.9,4
-            Z"/>
+<!--    <item android:gravity="center" android:width="65dp" android:height="65dp">-->
+<!--        <rotate android:fromDegrees="45">-->
+<!--            <shape android:shape="rectangle">-->
+<!--                <solid android:color="#12FFFFFF"/> <stroke android:width="1dp" android:color="#4DFFFFFF"/>-->
+<!--                <corners android:radius="16dp"/>-->
+<!--            </shape>-->
+<!--        </rotate>-->
+<!--    </item>-->
 
-    <path
-        android:name="letter_l"
-        android:fillColor="#FFFFFF"
-        android:pathData="
-            M88,72
-            Q84,68 88,76
-            L88,184
-            Q88,200 104,200
-            L160,200
-            Q168,200 168,208
-            Q168,216 160,216
-            L100,216
-            Q72,216 72,184
-            L72,76
-            Q72,56 88,56
-            Z"/>
+<!--    <item android:gravity="center" android:width="30dp" android:height="30dp">-->
+<!--        <rotate android:fromDegrees="45">-->
+<!--            <shape android:shape="rectangle">-->
+<!--                <solid android:color="#38BDF8"/>-->
+<!--                <corners android:radius="6dp"/>-->
+<!--            </shape>-->
+<!--        </rotate>-->
+<!--    </item>-->
+<!--</layer-list>-->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item><shape><solid android:color="@color/purple_40"/></shape></item>
 
-    <path
-        android:name="letter_t"
-        android:fillColor="#FFFFFF"
-        android:pathData="
-            M140,84
-            Q140,68 152,68
-            L216,68
-            Q228,68 228,84
-            Q228,96 216,96
-            L192,96
-            L192,192
-            Q192,208 180,208
-            Q168,208 168,192
-            L168,96
-            L152,96
-            Q140,96 140,84
-            Z"/>
-</vector>
+    <item android:gravity="center" android:width="70dp" android:height="70dp">
+        <rotate android:fromDegrees="45">
+            <shape android:shape="rectangle">
+                <stroke android:width="1dp" android:color="#3338BDF8"/>
+                <corners android:radius="20dp"/>
+            </shape>
+        </rotate>
+    </item>
+
+    <item android:gravity="center" android:width="45dp" android:height="45dp">
+        <rotate android:fromDegrees="45">
+            <shape android:shape="rectangle">
+                <stroke android:width="3dp" android:color="#38BDF8"/>
+                <corners android:radius="10dp"/>
+            </shape>
+        </rotate>
+    </item>
+</layer-list>
